Première version du site RIA Check & Go

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>RIA Check & Go</h1>
-        <p>Évaluez la conformité de votre système d'IA au Règlement Européen</p>
+        <p>Évaluez la conformité de votre système d'IA au Règlement Européen (AI Act)</p>
     </header>
 
     <main>
