--- a/result.html
+++ b/result.html
@@ -233,7 +233,7 @@
 
                 <!-- Actions -->
                 <div class="action-buttons">
-                    <a href="contact.html" class="btn btn">
+                    <a href="contact.html" class="btn btn-secondary">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
                         </svg>
